--- a/index.html
+++ b/index.html
@@ -176,21 +176,21 @@ const problems = [
     latexProblem: String.raw`פתרו את המשוואה ההומוגנית מסדר שני עם מקדמים קבועים:\; y'' - 3y' + 2y = 0`,
     hint1Html: `
       זוהי משוואה לינארית הומוגנית מסדר שני עם מקדמים קבועים.<br/>
-      הביאו לצורה הבאה (משוואת האופיין): \\(r^2 - 3r + 2 = 0\\).<br/>
+      הביאו לצורה הבאה (המשוואה האופיינית): \\(r^2 - 3r + 2 = 0\\).<br/>
       קבלו את השורשים ובנו בעזרתם את הפתרון הכללי.
     `,
     hint2Html: `
       קבלו פירוק לגורמים: \\((r-1)(r-2)=0\\) ולכן \\(r_1=1,\\; r_2=2\\).<br/>
-      בידדו את \\(y\\) לצורת פתרון כללי: \\(y(x)=C_1 e^{x}+C_2 e^{2x}\\).<br/>
+      בודדו את \\(y\\) לצורת פתרון כללי: \\(y(x)=C_1 e^{x}+C_2 e^{2x}\\).<br/>
       מותר לכתוב גם \\(\\exp(x)\\) במקום \\(e^x\\), וקבועים באותיות אחרות (A,B,K,M,C\\_1,C\\_2, ...).
     `,
     /* כמו אצלך: תצוגה למעלה + שלבים בנפרד */
     solutionDisplayLatex: String.raw`y = C_1 e^{x} + C_2 e^{2x}`,
     solutionStepsHtml: `
-      **משוואת האופיין**: \\(r^2 - 3r + 2 = 0\\).<br/>
-      **שורשים**: \\((r-1)(r-2)=0 \\Rightarrow r_1=1,\\; r_2=2\\).<br/>
-      **פתרון כללי**: \\(y(x) = C_1 e^{x} + C_2 e^{2x}\\).<br/>
-      **בדיקה**: \\(y' = C_1 e^{x} + 2C_2 e^{2x}\\), \\(y'' = C_1 e^{x} + 4C_2 e^{2x}\\).<br/>
+      **המשוואה האופיינית**: \\(r^2 - 3r + 2 = 0\\).<br/>
+      *שורשים*: \\((r-1)(r-2)=0 \\Rightarrow r_1=1,\\; r_2=2\\).<br/>
+      פתרון כללי: \\(y(x) = C_1 e^{x} + C_2 e^{2x}\\).<br/>
+      בדיקה: \\(y' = C_1 e^{x} + 2C_2 e^{2x}\\), \\(y'' = C_1 e^{x} + 4C_2 e^{2x}\\).<br/>
       מציבים ב-\\(y''-3y'+2y\\) ומקבלים 0 לכל \\(x\\).
     `,
     /* שומרים את מנגנון הבדיקה שלך: (y - basePart)/fundamental = קבוע */
