--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@ const problems = [
     solutionDisplayLatex: String.raw`y = C_1 e^{x} + C_2 e^{2x}`,
     solutionStepsHtml: `
       **המשוואה האופיינית**: \\(r^2 - 3r + 2 = 0\\).<br/>
-      *שורשים*: \\((r-1)(r-2)=0 \\Rightarrow r_1=1,\\; r_2=2\\).<br/>
+      שורשים: \\((r-1)(r-2)=0 \\Rightarrow r_1=1,\\; r_2=2\\).<br/>
       פתרון כללי: \\(y(x) = C_1 e^{x} + C_2 e^{2x}\\).<br/>
       בדיקה: \\(y' = C_1 e^{x} + 2C_2 e^{2x}\\), \\(y'' = C_1 e^{x} + 4C_2 e^{2x}\\).<br/>
       מציבים ב-\\(y''-3y'+2y\\) ומקבלים 0 לכל \\(x\\).
